qsk-macros/tests/fail/analyze/unsupported-key-function.rs
use qsk_macros::layer;

fn main() {
    layer!(
        ModLayer[Meow]: {
            F -> MEOW(Navigation),
        },
    );
}
