qsk-macros/tests/fail/analyze/unsupported-key-function.stderr
error: invalid key function

         = help: valid key functions include: ["TT", "TapToggle", "Exit"]

 --> tests/fail/analyze/unsupported-key-function.rs:6:18
  |
6 |             F -> MEOW(Navigation),
  |                  ^^^^
